--- a/Kapstondaw/capstone-frontend/scss/layout/_index.scss
+++ b/Kapstondaw/capstone-frontend/scss/layout/_index.scss
@@ -10,6 +10,7 @@
 @forward "services";
 @forward "concerns";
 @forward "announcement";
+@forward "awareness";
 @forward "contact_us";
 @forward "emergency_numbers";
 @forward "hotlines";
