--- a/Kapstondaw/capstone-frontend/scss/layout/_chat.scss
+++ b/Kapstondaw/capstone-frontend/scss/layout/_chat.scss
@@ -11,7 +11,7 @@
     transform: translateX(1000px);
     border-radius: 1rem;
     margin-bottom: 1rem;
-    background-color: #f8f9fa;
+    background-color: #e9ecef;
     transition: transform 0.5s ease-in-out;
     header {
       border-radius: 1rem 1rem 0 0;
@@ -44,6 +44,7 @@
       }
 
       .close-icon {
+        fill: #f8f9fa;
         display: flex;
         align-items: center;
         justify-content: center;
@@ -51,13 +52,10 @@
     }
 
     .messages-container {
-      height: 400px;
-      background-color: #f8f9fa;
+      overflow-y: scroll;
+      overflow-x: hidden;
+      max-height: 400px;
       padding: 1rem;
-      display: flex;
-      flex-direction: column;
-      align-items: end;
-      justify-content: end;
       .message-subContainer {
         width: 100%;
         display: flex;
@@ -78,6 +76,27 @@
         }
       }
 
+      .message-subContainer-admin {
+        width: 100%;
+        display: flex;
+        align-items: start;
+        justify-content: start;
+        margin-bottom: 1rem;
+
+        .main-message {
+          background-color: #ffffff;
+          border-radius: 1rem;
+          padding: 0.5rem 0.8rem;
+          min-width: 200px;
+          box-shadow: 0px 0px 10px 0px rgba(170, 170, 170, 0.25);
+          border: none;
+          p {
+            margin: 0;
+            font-size: 0.8rem;
+            color: #212529;
+          }
+        }
+      }
       .message-subContainer:last-of-type {
         margin-bottom: 0;
       }
@@ -93,7 +112,7 @@
     form {
       position: relative;
       border-radius: 0 0 1rem 1rem;
-      background-color: #f8f9fa;
+      background-color: #e9ecef;
       box-shadow: 10px 10px 15px rgba($color: #000000, $alpha: 0.25);
 
       .create-message {
@@ -104,15 +123,19 @@
         height: 15%;
         padding: 0.5rem 0.8rem;
 
-        input {
+        textarea {
+          resize: none;
           padding: 0.5rem 0.8rem;
-          width: 80%;
-          background-color: transparent;
+          min-width: 250px;
+          max-width: 250px;
+          height: 30px;
           border-bottom-color: 2px solid black;
           border: none;
           outline: transparent;
+          background-color: transparent;
         }
         button {
+          cursor: pointer;
           border: none;
           background-color: transparent;
           display: flex;
@@ -127,6 +150,7 @@
   .click-chat {
     overflow: hidden;
     button {
+      cursor: pointer;
       background-color: #0a7cff;
       border: none;
       border-radius: 2rem;
