--- a/Kapstondaw/capstone-frontend/scss/layout/_contact_us.scss
+++ b/Kapstondaw/capstone-frontend/scss/layout/_contact_us.scss
@@ -1,6 +1,7 @@
 .contact-us {
   position: relative;
   width: 100%;
+  height: 100vh;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -104,7 +105,7 @@
       height: 100%;
 
       iframe {
-        width: 100%;
+        width: 500px;
         height: inherit;
       }
     }
@@ -122,9 +123,9 @@
 .contact-us::before {
   content: "";
   position: absolute;
-  top: 0;
+  bottom: 0;
   right: 0;
   width: 500px;
-  height: 100vh;
+  height: 100%;
   background-color: #097338;
 }
