--- a/Kapstondaw/capstone-frontend/scss/layout/_subHeader.scss
+++ b/Kapstondaw/capstone-frontend/scss/layout/_subHeader.scss
@@ -30,8 +30,8 @@
     min-width: 375px;
 
     .logo {
-      width: 77px;
-      height: 77px;
+      max-width: 77px;
+      max-height: 77px;
       border-radius: 100%;
       overflow: hidden;
       background-color: aqua;
@@ -39,13 +39,16 @@
       align-items: center;
       justify-content: center;
       @media (min-width: 375px) {
-        width: 80px;
+        max-width: 70px;
+        max-height: 70px;
+
+        object-fit: cover;
       }
       img {
         // position: absolute;
         // top: 35%;
-        width: inherit;
-        height: inherit;
+        width: 100%;
+        height: 100%;
         object-fit: cover;
         @media (min-width: 375px) {
           // position: static;
