--- a/Kapstondaw/capstone-frontend/scss/styles.css
+++ b/Kapstondaw/capstone-frontend/scss/styles.css
@@ -158,8 +158,8 @@ header ul li:nth-child(1) {
   min-width: 375px;
 }
 .subHeader .layer1 .logo {
-  width: 77px;
-  height: 77px;
+  max-width: 77px;
+  max-height: 77px;
   border-radius: 100%;
   overflow: hidden;
   background-color: aqua;
@@ -169,12 +169,15 @@ header ul li:nth-child(1) {
 }
 @media (min-width: 375px) {
   .subHeader .layer1 .logo {
-    width: 80px;
+    max-width: 70px;
+    max-height: 70px;
+    -o-object-fit: cover;
+       object-fit: cover;
   }
 }
 .subHeader .layer1 .logo img {
-  width: inherit;
-  height: inherit;
+  width: 100%;
+  height: 100%;
   -o-object-fit: cover;
      object-fit: cover;
 }
@@ -777,12 +780,13 @@ header ul li:nth-child(1) {
   width: 90%;
   border-radius: 1rem;
   overflow: hidden;
-  display: flex;
-  align-items: center;
-  justify-content: center;
   height: calc(100vh - 30%);
   border-radius: 1rem;
-  overflow: hidden;
+}
+@media (min-width: 375px) {
+  .announcement .swiper {
+    padding: 2rem;
+  }
 }
 .announcement .swiper .options {
   height: 95%;
@@ -849,11 +853,104 @@ header ul li:nth-child(1) {
 }
 .announcement .swiper-pagination-bullet {
   background-color: #097338;
+  transform: translateX(-5px);
+}
+
+.awareness-page {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
+  padding: 5rem;
+  position: relative;
+}
+.awareness-page .section-1 {
+  height: 100%;
+  width: 100%;
+  padding: 2rem;
+}
+.awareness-page .section-1 h1 {
+  margin: 0;
+  font-size: 2.5rem;
+  color: #f8f9fa;
+}
+.awareness-page .section-1 p {
+  color: #f8f9fa;
+  font-size: 0.9rem;
+  line-height: 180%;
+}
+.awareness-page .section-2 {
+  height: 80%;
+  width: 100%;
+  padding: 2rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.awareness-page .section-2 form label {
+  color: #212529;
+  font-size: 0.8rem;
+  font-weight: 600;
+}
+.awareness-page .section-2 form .name,
+.awareness-page .section-2 form .address {
+  display: flex;
+  align-items: center;
+  justify-content: start;
+  gap: 1rem;
+  margin-bottom: 1rem;
+  margin-top: 0.5rem;
+}
+.awareness-page .section-2 form .name input,
+.awareness-page .section-2 form .address input {
+  background-color: #e5e5e5;
+  border-radius: 0.5rem;
+  border: none;
+  outline: transparent;
+  width: 150px;
+  padding: 0.5rem;
+}
+.awareness-page .section-2 form .name #suffix,
+.awareness-page .section-2 form .address #suffix {
+  width: 100px;
+}
+.awareness-page .section-2 form textarea {
+  padding: 1rem;
+  outline: transparent;
+  background-color: #e5e5e5;
+  border: none;
+  border-radius: 0.5rem;
+  margin-bottom: 1rem;
+  margin-top: 0.5rem;
+  resize: none;
+  width: 100%;
+  height: 200px;
+}
+.awareness-page .section-2 form button {
+  background-color: #097338;
+  border-radius: 0.5rem;
+  border: none;
+  font-weight: 600;
+  color: #f8f9fa;
+  width: 100%;
+  padding: 0.8rem;
+}
+
+.awareness-page::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 50%;
+  height: 100%;
+  background-color: #097338;
+  z-index: -1;
 }
 
 .contact-us {
   position: relative;
   width: 100%;
+  height: 100vh;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -951,7 +1048,7 @@ header ul li:nth-child(1) {
   height: 100%;
 }
 .contact-us main .section-2 iframe {
-  width: 100%;
+  width: 500px;
   height: inherit;
 }
 @media (min-width: 375px) {
@@ -967,10 +1064,10 @@ header ul li:nth-child(1) {
 .contact-us::before {
   content: "";
   position: absolute;
-  top: 0;
+  bottom: 0;
   right: 0;
   width: 500px;
-  height: 100vh;
+  height: 100%;
   background-color: #097338;
 }
 
@@ -1852,7 +1949,7 @@ footer .com ul li {
   transform: translateX(1000px);
   border-radius: 1rem;
   margin-bottom: 1rem;
-  background-color: #f8f9fa;
+  background-color: #e9ecef;
   transition: transform 0.5s ease-in-out;
 }
 .chat-container .chat-screen header {
@@ -1884,18 +1981,16 @@ footer .com ul li {
   color: #f8f9fa;
 }
 .chat-container .chat-screen header .close-icon {
+  fill: #f8f9fa;
   display: flex;
   align-items: center;
   justify-content: center;
 }
 .chat-container .chat-screen .messages-container {
-  height: 400px;
-  background-color: #f8f9fa;
+  overflow-y: scroll;
+  overflow-x: hidden;
+  max-height: 400px;
   padding: 1rem;
-  display: flex;
-  flex-direction: column;
-  align-items: end;
-  justify-content: end;
 }
 .chat-container .chat-screen .messages-container .message-subContainer {
   width: 100%;
@@ -1915,6 +2010,26 @@ footer .com ul li {
   font-size: 0.8rem;
   color: #f8f9fa;
 }
+.chat-container .chat-screen .messages-container .message-subContainer-admin {
+  width: 100%;
+  display: flex;
+  align-items: start;
+  justify-content: start;
+  margin-bottom: 1rem;
+}
+.chat-container .chat-screen .messages-container .message-subContainer-admin .main-message {
+  background-color: #ffffff;
+  border-radius: 1rem;
+  padding: 0.5rem 0.8rem;
+  min-width: 200px;
+  box-shadow: 0px 0px 10px 0px rgba(170, 170, 170, 0.25);
+  border: none;
+}
+.chat-container .chat-screen .messages-container .message-subContainer-admin .main-message p {
+  margin: 0;
+  font-size: 0.8rem;
+  color: #212529;
+}
 .chat-container .chat-screen .messages-container .message-subContainer:last-of-type {
   margin-bottom: 0;
 }
@@ -1927,7 +2042,7 @@ footer .com ul li {
 .chat-container .chat-screen form {
   position: relative;
   border-radius: 0 0 1rem 1rem;
-  background-color: #f8f9fa;
+  background-color: #e9ecef;
   box-shadow: 10px 10px 15px rgba(0, 0, 0, 0.25);
 }
 .chat-container .chat-screen form .create-message {
@@ -1938,15 +2053,19 @@ footer .com ul li {
   height: 15%;
   padding: 0.5rem 0.8rem;
 }
-.chat-container .chat-screen form .create-message input {
+.chat-container .chat-screen form .create-message textarea {
+  resize: none;
   padding: 0.5rem 0.8rem;
-  width: 80%;
-  background-color: transparent;
+  min-width: 250px;
+  max-width: 250px;
+  height: 30px;
   border-bottom-color: 2px solid black;
   border: none;
   outline: transparent;
+  background-color: transparent;
 }
 .chat-container .chat-screen form .create-message button {
+  cursor: pointer;
   border: none;
   background-color: transparent;
   display: flex;
@@ -1958,6 +2077,7 @@ footer .com ul li {
   overflow: hidden;
 }
 .chat-container .click-chat button {
+  cursor: pointer;
   background-color: #0a7cff;
   border: none;
   border-radius: 2rem;
