--- a/Kapstondaw/capstone-frontend/scss/layout/_chat.scss
+++ b/Kapstondaw/capstone-frontend/scss/layout/_chat.scss
@@ -6,11 +6,18 @@
   display: flex;
   flex-direction: column;
   align-items: end;
+  justify-content: end;
 
+  @media (min-width: 375px) {
+    height: fit-content;
+    width: fit-content;
+    background-color: black;
+    border-radius: 2rem;
+  }
   .chat-screen {
+    position: absolute;
     transform: translateX(1000px);
     border-radius: 1rem;
-    margin-bottom: 1rem;
     background-color: #e9ecef;
     transition: transform 0.5s ease-in-out;
     header {
