--- a/Kapstondaw/capstone-frontend/scss/layout/_contact_us.scss
+++ b/Kapstondaw/capstone-frontend/scss/layout/_contact_us.scss
@@ -57,6 +57,16 @@
           -webkit-appearance: none;
           -moz-appearance: textfield;
         }
+
+        textarea {
+          resize: none;
+          width: 100%;
+          border-radius: 0.5rem;
+          border: 1px solid rgba($color: #000000, $alpha: 0.5);
+          margin-bottom: 1rem;
+          height: 20vh;
+          padding: 0.8rem 1rem;
+        }
         button {
           background-color: #097338;
           border: none;
