--- a/Kapstondaw/capstone-frontend/scss/layout/_chat.scss
+++ b/Kapstondaw/capstone-frontend/scss/layout/_chat.scss
@@ -94,9 +94,10 @@
           background-color: #ffffff;
           border-radius: 1rem;
           padding: 0.5rem 0.8rem;
-          min-width: 200px;
+          max-width: 200px;
           box-shadow: 0px 0px 10px 0px rgba(170, 170, 170, 0.25);
           border: none;
+
           p {
             margin: 0;
             font-size: 0.8rem;
