--- a/Kapstondaw/capstone-frontend/scss/styles.css
+++ b/Kapstondaw/capstone-frontend/scss/styles.css
@@ -2067,7 +2067,7 @@ footer .com ul li {
   background-color: #ffffff;
   border-radius: 1rem;
   padding: 0.5rem 0.8rem;
-  min-width: 200px;
+  max-width: 200px;
   box-shadow: 0px 0px 10px 0px rgba(170, 170, 170, 0.25);
   border: none;
 }
