--- a/Kapstondaw/capstone-frontend/frontendScss/layout/_header.scss
+++ b/Kapstondaw/capstone-frontend/frontendScss/layout/_header.scss
@@ -107,6 +107,7 @@ header {
   }
 
   .user {
+    position: relative;
     display: none;
     z-index: 3;
     @media (min-width: 375px) {
@@ -115,11 +116,57 @@ header {
       justify-content: center;
       gap: 1rem;
 
+      .profile-img {
+        border: none;
+        border-radius: 100%;
+        width: 40px;
+        height: 40px;
+        object-fit: cover;
+        padding: 0.2rem;
+        overflow: hidden;
+
+        img {
+          width: 100%;
+          height: 100%;
+        }
+      }
+
+      .profile-down {
+        border: none;
+        border-radius: 100%;
+        width: 40px;
+        height: 40px;
+        object-fit: cover;
+        padding: 0.2rem;
+        overflow: hidden;
+
+        img {
+          width: 100%;
+          height: 100%;
+        }
+      }
+
+      .profile-option {
+        background-color: red;
+        border-radius: 0.5rem;
+        position: absolute;
+        top: 80%;
+        right: 0;
+        width: 100px;
+        height: 0;
+        overflow: hidden;
+
+        p {
+          margin: 0;
+        }
+      }
+
       .login-div {
         border: none;
         padding: 0.5rem 1rem;
         border-radius: 0.5rem;
         background-color: #f8f9fa;
+        position: absolute;
         p {
           margin: 0;
           a {
