--- a/Kapstondaw/capstone-frontend/frontendScss/styles.css
+++ b/Kapstondaw/capstone-frontend/frontendScss/styles.css
@@ -128,6 +128,7 @@ header ul li {
   }
 }
 header .user {
+  position: relative;
   display: none;
   z-index: 3;
 }
@@ -138,11 +139,53 @@ header .user {
     justify-content: center;
     gap: 1rem;
   }
+  header .user .profile-img {
+    border: none;
+    border-radius: 100%;
+    width: 40px;
+    height: 40px;
+    -o-object-fit: cover;
+       object-fit: cover;
+    padding: 0.2rem;
+    overflow: hidden;
+  }
+  header .user .profile-img img {
+    width: 100%;
+    height: 100%;
+  }
+  header .user .profile-down {
+    border: none;
+    border-radius: 100%;
+    width: 40px;
+    height: 40px;
+    -o-object-fit: cover;
+       object-fit: cover;
+    padding: 0.2rem;
+    overflow: hidden;
+  }
+  header .user .profile-down img {
+    width: 100%;
+    height: 100%;
+  }
+  header .user .profile-option {
+    background-color: red;
+    border-radius: 0.5rem;
+    position: absolute;
+    top: 80%;
+    right: 0;
+    width: 100px;
+    height: 0;
+    overflow: hidden;
+  }
+  header .user .profile-option p {
+    margin: 0;
+  }
   header .user .login-div {
     border: none;
     padding: 0.5rem 1rem;
     border-radius: 0.5rem;
     background-color: #f8f9fa;
+    position: absolute;
   }
   header .user .login-div p {
     margin: 0;
