--- a/Kapstondaw/capstone-frontend/frontendScss/layout/_chat.scss
+++ b/Kapstondaw/capstone-frontend/frontendScss/layout/_chat.scss
@@ -62,6 +62,7 @@
       overflow-y: scroll;
       overflow-x: hidden;
       max-height: 400px;
+      min-height: 400px;
       padding: 1rem;
       .message-subContainer {
         width: 100%;
